--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <div id="draggable3" class="draggable" draggable="true">Button 3</div>
     </div>
     <div id="dropzone" class="dropzone"></div>
+    <div class="searchresults"></div>
     <script src="script.js"></script>
 </body>
 </html>
