--- a/index.html
+++ b/index.html
@@ -3,10 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Freelancer</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header>
+        <img src="images/logo.png" alt="">
+        <nav class="nav">
+            <ul>
+                <li><a href="/*Contracts*/"><button class="btn btn-primary">Contracts</button></a></li>
+                <li><a href="/*Profile*/"><button class="btn btn-primary">Profile</button></a></li>
+            </ul>
+        </nav>
+    </header>
     <div id="card_container">
         <button id="card">
             <img src="images/card_image.jpg" alt="card_image">
@@ -30,11 +40,12 @@
 <div class="complete-container">
     <div class="draggable-container">
         <div id="search-container">
-            <input type="text" name="feature-search" id="feature-inp">
+            <input type="text" id="searchInput" placeholder="Search...">
+            <button id="searchButton">Search</button>
+            <div id="divContainer" class="draggable" draggable="true">Button 1</div>
+            <div id="divContainer" class="draggable" draggable="true">Button 2</div>
+            <div id="divContainer" class="draggable" draggable="true">Button 3</div>
         </div>
-        <div id="draggable1" class="draggable" draggable="true">Button 1</div>
-        <div id="draggable2" class="draggable" draggable="true">Button 2</div>
-        <div id="draggable3" class="draggable" draggable="true">Button 3</div>
     </div>
     <div id="dropzone" class="dropzone"></div>
     <div class="searchresults"></div>
