--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img src="images/logo.png" alt="">
+        <img class="logo" src="images/logo.png" alt="">
         <nav class="nav">
             <ul>
                 <li><a href="/*Contracts*/"><button class="btn btn-primary">Contracts</button></a></li>
