--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </ul>
         </nav>
     </header>
-    <div id="card_container">
+    <div id="card-container">
         <button class="card">
             <img class="tile-img" src="images/card_image.jpg" alt="card_image">
         </button>
