--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
         </div>
     </div>
     <div id="dropzone" class="dropzone"></div>
-    <div class="searchresults"></div>
+    <div class="searchresults">
+        <p>p</p>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
