--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
 
     
-<div class="complete-container">
+<div id="complete-container">
     <div class="draggable-container">
         <div id="search-container">
             <input type="text" id="searchInput" placeholder="Search...">
@@ -46,7 +46,7 @@
             <div id="divContainer" class="draggable" draggable="true">Button 3</div>
         </div>
     </div>
-    <div id="dropzone" class="dropzone"></div>
+    <div id="dropzone" class="dropzone">Drag Features Here</div>
     <div class="searchresults"></div>
     <script src="script.js"></script>
 </body>
