--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
         </button>
 
         <button class="card">
-            <img class="tile-img" src="images/card_image.jpg" alt="card_image">
+            <img class="tile-img" src="images/chatbot.jpg" alt="card_image">
         </button>
         <button class="card">
-            <img class="tile-img" src="images/card_image.jpg" alt="card_image">
+            <img class="tile-img" src="images/blog.jpg" alt="card_image">
         </button>
         <button class="card">
-            <img class="tile-img" src="images/card_image.jpg" alt="card_image">
+            <img class="tile-img" src="images/forum.jpg" alt="card_image">
         </button>
     </div>
 
