added heading to dropzone

--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
             <div id="divContainer" class="draggable" draggable="true">Button 3</div>
         </div>
     </div>
-    <div id="dropzone" class="dropzone">Drag Features Here</div>
+    <div id="dropzone" class="dropzone">
+        <div id="dropzone-heading">
+            Drag Features Here
+        </div>
+    </div>
     <div class="searchresults"></div>
     <script src="script.js"></script>
 </body>
