adding picture to searchbox

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
             <div id="divContainer" class="draggable" draggable="true">Button 1</div>
             <div id="divContainer" class="draggable" draggable="true">Button 2</div>
             <div id="divContainer" class="draggable" draggable="true">Button 3</div>
+            <div id="divContainer" class="draggable" draggable="true">Button 4</div>
+            <div id="divContainer" class="draggable" draggable="true">Button 4</div>
+            <div id="divContainer" class="draggable" draggable="true">Button 4</div>    
         </div>
     </div>
     <div id="dropzone" class="dropzone">
@@ -48,7 +51,10 @@
             Drag Features Here
         </div>
     </div>
-    <div class="searchresults"></div>
+    <div class="searchresults">
+        <div id="feature-img-container"></div>
+        <div id="text-container"></div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
