adding headings for search result

--- a/index.html
+++ b/index.html
@@ -53,7 +53,12 @@
     </div>
     <div class="searchresults">
         <div id="feature-img-container"></div>
-        <div id="text-container"></div>
+        <div id="text-container">
+            <h4>Why it's required</h4>
+            <h4>How it's used?</h4>
+            <h4>Best Practices</h4>
+            </h4>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
