--- a/index.html
+++ b/index.html
@@ -53,12 +53,7 @@
     </div>
     <div class="searchresults">
         <div id="feature-img-container"></div>
-        <div id="text-container">
-            <h4>Why it's required</h4>
-            <h4>How it's used?</h4>
-            <h4>Best Practices</h4>
-            </h4>
-        </div>
+        <div id="text-container"></div>
     </div>
     <script src="script.js"></script>
 </body>
