--- a/profile.html
+++ b/profile.html
@@ -17,6 +17,13 @@
             </ul>
         </nav>
     </header>
-    
+    <div class="container">
+        <div class="inneritem">
+            <img class="pp" src="images/pp.jpg" alt="">
+        </div>
+        <div class="inneritem">
+            <img class="pp" src="images/pp.jpg" alt="">
+        </div>
+    </div>
 </body>
 </html>
