--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="draggable-container">
         <div id="search-container">
             <input type="text" id="searchInput" placeholder="Search...">
-            <div id="divContainer" class="draggable" draggable="true">Button 1</div>
+            <div id="home-page" class="draggable" draggable="true">Home Page</div>
             <div id="divContainer" class="draggable" draggable="true">Button 2</div>
             <div id="divContainer" class="draggable" draggable="true">Button 3</div>
             <div id="divContainer" class="draggable" draggable="true">Button 4</div>
@@ -63,9 +63,6 @@
     <div class="searchresults">
         <div id="feature-img-container"></div>
         <div id="text-container">
-            <h4>Why is it required?</h4>
-            <h4>How is it used?</h4>
-            <h4>Best Practices</h4>
         </div>
     </div>
     <script src="script.js"></script>
