--- a/index.html
+++ b/index.html
@@ -51,11 +51,17 @@
           </div>
           
             <div id="divContainer" class="draggable" draggable="true">Home Page</div>
-            <div id="divContainer" class="draggable" draggable="true">Button 2</div>
-            <div id="divContainer" class="draggable" draggable="true">Button 3</div>
-            <div id="divContainer" class="draggable" draggable="true">Button 4</div>
-            <div id="divContainer" class="draggable" draggable="true">Button 4</div>
-            <div id="divContainer" class="draggable" draggable="true">Button 4</div>    
+            <div id="divContainer" class="draggable" draggable="true">Product Listing's</div>
+            <div id="divContainer" class="draggable" draggable="true">Sort and filter</div>
+            <div id="divContainer" class="draggable" draggable="true">Exchange</div>
+            <div id="divContainer" class="draggable" draggable="true">Shipping</div>
+            <div id="divContainer" class="draggable" draggable="true">Cart</div> 
+            <div id="divContainer" class="draggable" draggable="true">Return</div>   
+            <div id="divContainer" class="draggable" draggable="true">Logistics</div>   
+            <div id="divContainer" class="draggable" draggable="true">Checkout</div> 
+            <div id="divContainer" class="draggable" draggable="true">Payment Portal</div>   
+  
+               
         </div>
     </div>
     <div id="dropzone" class="dropzone">
@@ -66,9 +72,6 @@
     <div class="searchresults">
         <div id="feature-img-container"></div>
         <div id="text-container">
-            <h4>Why is it required?</h4>
-            <h4>How is it used?</h4>
-            <h4>Best Practices</h4>
         </div>
     </div>
     <script src="script.js"></script>
