--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <input type="text" class="form-control" placeholder="Search for Features" aria-label="Username" aria-describedby="basic-addon1">
           </div>
           
-            <div id="divContainer" class="draggable" draggable="true">Home Page</div>
+            <div id="home-page" class="draggable" draggable="true">Home Page</div>
             <div id="divContainer" class="draggable" draggable="true">Button 2</div>
             <div id="divContainer" class="draggable" draggable="true">Button 3</div>
             <div id="divContainer" class="draggable" draggable="true">Button 4</div>
@@ -65,8 +65,7 @@
     </div>
     <div class="searchresults">
         <div id="feature-img-container"></div>
-        <div id="text-container">
-        </div>
+        <div id="text-container"></div>
     </div>
     <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
