--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
           </div>
           
             <div id="divContainer" class="draggable" draggable="true">Home Page</div>
-            <div id="divContainer" class="draggable" draggable="true">Product Listing's</div>
-            <div id="divContainer" class="draggable" draggable="true">Sort and filter</div>
+            <div id="divContainer" class="draggable" draggable="true">Product's</div>
+            <div id="divContainer" class="draggable" draggable="true">Filter</div>
             <div id="divContainer" class="draggable" draggable="true">Exchange</div>
             <div id="divContainer" class="draggable" draggable="true">Shipping</div>
             <div id="divContainer" class="draggable" draggable="true">Cart</div> 
             <div id="divContainer" class="draggable" draggable="true">Return</div>   
             <div id="divContainer" class="draggable" draggable="true">Logistics</div>   
             <div id="divContainer" class="draggable" draggable="true">Checkout</div> 
-            <div id="divContainer" class="draggable" draggable="true">Payment Portal</div>   
+            <div id="divContainer" class="draggable" draggable="true">Payment</div>   
   
                
         </div>
