--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <input type="text" class="form-control" placeholder="Search for Features" aria-label="Username" aria-describedby="basic-addon1">
           </div>
           
-            <div id="product-listing" class="draggable" draggable="true">Home Page</div>
+            <div id="product-listing" class="draggable" draggable="true">Product Listing</div>
             <div id="divContainer" class="draggable" draggable="true">Product's</div>
             <div id="divContainer" class="draggable" draggable="true">Filter</div>
             <div id="divContainer" class="draggable" draggable="true">Exchange</div>
