--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="draggable-container">
         <div id="search-container">
           <div class="input-group mb-3">
-            <input type="text" class="form-control" placeholder="Search for Features" aria-label="Username" aria-describedby="basic-addon1">
+            <input type="text" id="searchInput" class="form-control" placeholder="Search for Features" aria-label="Username" aria-describedby="basic-addon1">
           </div>
           
             <div id="product-listing" class="draggable" draggable="true">Product Listing</div>
