--- a/profile.html
+++ b/profile.html
@@ -46,8 +46,18 @@
                         <div class="card mb-4">
                             <a href="#!"><img class="card-img-top" src="https://dummyimage.com/700x350/dee2e6/6c757d.jpg" alt="..." /></a>
                             <div class="card-body">
-                                <div class="small text-muted">January 1, 2023</div>
-                                <h2 class="card-title h4">Post Title</h2>
+                                <div class="small text-muted">Highly Recommended</div>
+                                <h2 class="card-title h4">Dev Name</h2>
+                                <div class="icons">
+                                    <div id="divContainerv2"  >Home Page</div>
+                                    <div id="divContainerv2"  >Filter</div>
+                                    <div id="divContainerv2"  >Exchange</div>
+                                    <div id="divContainerv2"  >Chat</div>
+                                    <div id="divContainerv2"  >API Dev</div>   
+                                    <div id="divContainerv2"  >Logistics</div>   
+                                    <div id="divContainerv2"  >Checkout</div> 
+                                    <div id="divContainerv2"  >Payment</div>  
+                                </div>
                                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla.</p>
                                 <a class="btn btn-primary" href="#!">Read more →</a>
                             </div>
@@ -56,8 +66,15 @@
                         <div class="card mb-4">
                             <a href="#!"><img class="card-img-top" src="https://dummyimage.com/700x350/dee2e6/6c757d.jpg" alt="..." /></a>
                             <div class="card-body">
-                                <div class="small text-muted">January 1, 2023</div>
-                                <h2 class="card-title h4">Post Title</h2>
+                                <div class="small text-muted">Highly Recommended</div>
+                                <h2 class="card-title h4">Dev Name</h2>
+                                <div class="icons">
+                                    <div id="divContainerv2"  >Shipping</div>
+                                    <div id="divContainerv2"  >Cart</div>   
+                                    <div id="divContainerv2"  >Logistics</div>   
+                                    <div id="divContainerv2"  >Checkout</div> 
+                                    <div id="divContainerv2"  >Payment</div>  
+                                </div>
                                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla.</p>
                                 <a class="btn btn-primary" href="#!">Read more →</a>
                             </div>
@@ -68,8 +85,14 @@
                         <div class="card mb-4">
                             <a href="#!"><img class="card-img-top" src="https://dummyimage.com/700x350/dee2e6/6c757d.jpg" alt="..." /></a>
                             <div class="card-body">
-                                <div class="small text-muted">January 1, 2023</div>
-                                <h2 class="card-title h4">Post Title</h2>
+                                <div class="small text-muted">Highly Recommended</div>
+                                <h2 class="card-title h4">Dev Name</h2>
+                                <div class="icons">
+                                    <div id="divContainerv2"  >Home Page</div>
+                                    <div id="divContainerv2"  >Filter</div>
+                                    <div id="divContainerv2"  >Exchange</div>
+                                    <div id="divContainerv2"  >Shipping</div>
+                                </div>
                                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla.</p>
                                 <a class="btn btn-primary" href="#!">Read more →</a>
                             </div>
@@ -78,26 +101,23 @@
                         <div class="card mb-4">
                             <a href="#!"><img class="card-img-top" src="https://dummyimage.com/700x350/dee2e6/6c757d.jpg" alt="..." /></a>
                             <div class="card-body">
-                                <div class="small text-muted">January 1, 2023</div>
-                                <h2 class="card-title h4">Post Title</h2>
+                                <div class="small text-muted">Highly Recommended</div>
+                                <h2 class="card-title h4">Dev Name</h2>
+                                <div class="icons">
+                                    <div id="divContainerv2"  >Home Page</div>
+                                    <div id="divContainerv2"  >Filter</div>
+                                    <div id="divContainerv2"  >Exchange</div>
+                                    <div id="divContainerv2"  >Shipping</div>
+                                    <div id="divContainerv2"  >Chatbot</div>   
+                                    <div id="divContainerv2"  >Logistics</div>   
+                                    <div id="divContainerv2"  >Checkout</div> 
+                                    <div id="divContainerv2"  >Payment</div>  
+                                </div>
                                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam.</p>
                                 <a class="btn btn-primary" href="#!">Read more →</a>
                             </div>
                         </div>
                     </div>
                 </div>
-                <!-- Pagination-->
-                <nav aria-label="Pagination">
-                    <hr class="my-0" />
-                    <ul class="pagination justify-content-center my-4">
-                        <li class="page-item disabled"><a class="page-link" href="#" tabindex="-1" aria-disabled="true">Newer</a></li>
-                        <li class="page-item active" aria-current="page"><a class="page-link" href="#!">1</a></li>
-                        <li class="page-item"><a class="page-link" href="#!">2</a></li>
-                        <li class="page-item"><a class="page-link" href="#!">3</a></li>
-                        <li class="page-item disabled"><a class="page-link" href="#!">...</a></li>
-                        <li class="page-item"><a class="page-link" href="#!">15</a></li>
-                        <li class="page-item"><a class="page-link" href="#!">Older</a></li>
-                    </ul>
-                </nav>
-            </div>
+
            
