--- a/index.html
+++ b/index.html
@@ -6,6 +6,28 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Freelancer</title>
     <link rel="stylesheet" href="styles.css">
+    <script
+  src="https://code.jquery.com/jquery-3.7.1.min.js"
+  integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+  crossorigin="anonymous"></script>
+  <script>
+  $(document).ready(function() {
+    $(".carousel-item").click(function() {
+        const itemsToMove = ['Product Listing', 'Filter', 'Checkout']; // Example items
+        const draggableContainer = $('.draggable-container');
+        const dropzone = $('.dropzone');
+        itemsToMove.forEach(item => {
+            const draggableItems = draggableContainer.find(`.draggable:contains("${item}")`);
+            draggableItems.each(function() {
+                dropzone.append($(this));
+            });
+        });
+        alert(this.id);
+    });
+});
+
+
+    </script>
 </head>
 <body>
     <header>
@@ -47,19 +69,19 @@
     <div class="draggable-container">
         <div id="search-container">
           <div class="input-group mb-3">
-            <input type="text" class="form-control" placeholder="Search for Features" aria-label="Username" aria-describedby="basic-addon1">
+            <input id="searchInput" type="text" class="form-control" placeholder="Search for Features" aria-label="Username" aria-describedby="basic-addon1">
           </div>
           
-            <div id="product-listing" class="draggable" draggable="true">Product Listing</div>
-            <div id="divContainer" class="draggable" draggable="true">Product's</div>
-            <div id="divContainer" class="draggable" draggable="true">Filter</div>
-            <div id="divContainer" class="draggable" draggable="true">Exchange</div>
-            <div id="divContainer" class="draggable" draggable="true">Shipping</div>
-            <div id="divContainer" class="draggable" draggable="true">Cart</div> 
-            <div id="divContainer" class="draggable" draggable="true">Return</div>   
-            <div id="divContainer" class="draggable" draggable="true">Logistics</div>   
-            <div id="divContainer" class="draggable" draggable="true">Checkout</div> 
-            <div id="divContainer" class="draggable" draggable="true">Payment</div>   
+          <div id="product-listing" class="draggable2" draggable="true">Product Listing</div>
+          <div id="divContainer" class="draggable2" draggable="true">Product's</div>
+          <div id="divContainer" class="draggable2" draggable="true">Filter</div>
+          <div id="divContainer" class="draggable2" draggable="true">Exchange</div>
+          <div id="divContainer" class="draggable2" draggable="true">Shipping</div>
+          <div id="divContainer" class="draggable2" draggable="true">Cart</div> 
+          <div id="divContainer" class="draggable2" draggable="true">Return</div>   
+          <div id="divContainer" class="draggable2" draggable="true">Logistics</div>   
+          <div id="divContainer" class="draggable2" draggable="true">Checkout</div> 
+          <div id="divContainer" class="draggable2" draggable="true">Payment</div>   
   
                
         </div>
@@ -76,5 +98,9 @@
     </div>
     <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script
+  src="https://code.jquery.com/jquery-3.7.1.min.js"
+  integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+  crossorigin="anonymous"></script>
 </body>
 </html>
