final final final

--- a/profile.html
+++ b/profile.html
@@ -11,8 +11,8 @@
         <header class="py-5 bg-light border-bottom mb-4">
             <div class="container">
                 <div class="text-center my-5">
-                    <h1 class="fw-bolder">Multiple Results Found!</h1>
-                    <p class="lead mb-0">With Your Given Criteria We Found These Indeviduals For You</p>
+                    <h1 style="color: #330066;" class="fw-bolder">Multiple Results Found!</h1>
+                    <p style="color: #330066;" class="lead mb-0">With Your Given Criteria We Found These Indeviduals For You</p>
                 </div>
             </div>
         </header>
@@ -21,7 +21,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="card mb-4">
-                    <a href="#!"><img class="card-img-top" src="https://dummyimage.com/850x350/dee2e6/6c757d.jpg" alt="..." /></a>
+                    <a href="#!"><img class="card-img-top" src="images/4.jpg" alt="..." /></a>
                     <div class="card-body">
                         <div class="small text-muted">Your Best Match</div>
                         <h2 class="card-title">Dev Name</h2>
@@ -44,7 +44,7 @@
                     <div class="col-lg-6">
                         <!-- Blog post-->
                         <div class="card mb-4">
-                            <a href="#!"><img class="card-img-top" src="https://dummyimage.com/700x350/dee2e6/6c757d.jpg" alt="..." /></a>
+                            <a href="#!"><img class="card-img-top" src="images/5.jpg" alt="..." /></a>
                             <div class="card-body">
                                 <div class="small text-muted">Highly Recommended</div>
                                 <h2 class="card-title h4">Dev Name</h2>
@@ -64,7 +64,7 @@
                         </div>
                         <!-- Blog post-->
                         <div class="card mb-4">
-                            <a href="#!"><img class="card-img-top" src="https://dummyimage.com/700x350/dee2e6/6c757d.jpg" alt="..." /></a>
+                            <a href="#!"><img class="card-img-top" src="images/1.jpg" /></a>
                             <div class="card-body">
                                 <div class="small text-muted">Highly Recommended</div>
                                 <h2 class="card-title h4">Dev Name</h2>
@@ -83,7 +83,7 @@
                     <div class="col-lg-6">
                         <!-- Blog post-->
                         <div class="card mb-4">
-                            <a href="#!"><img class="card-img-top" src="https://dummyimage.com/700x350/dee2e6/6c757d.jpg" alt="..." /></a>
+                            <a href="#!"><img class="card-img-top" src="images/2.jpg" alt="..." /></a>
                             <div class="card-body">
                                 <div class="small text-muted">Highly Recommended</div>
                                 <h2 class="card-title h4">Dev Name</h2>
@@ -99,7 +99,7 @@
                         </div>
                         <!-- Blog post-->
                         <div class="card mb-4">
-                            <a href="#!"><img class="card-img-top" src="https://dummyimage.com/700x350/dee2e6/6c757d.jpg" alt="..." /></a>
+                            <a href="#!"><img class="card-img-top" src="images/3.jpg" alt="..." /></a>
                             <div class="card-body">
                                 <div class="small text-muted">Highly Recommended</div>
                                 <h2 class="card-title h4">Dev Name</h2>
