--- a/index.html
+++ b/index.html
@@ -6,25 +6,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Freelancer</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-  <script>
-  $(document).ready(function() {
-    $(".carousel-item").click(function() {
-        const itemsToMove = ['Product Listing', 'Filter', 'Checkout']; 
-        const draggableContainer = $('.draggable-container');
-        const dropzone = $('.dropzone');
-        itemsToMove.forEach(item => {
-            const draggableItems = draggableContainer.find(`.draggable:contains("${item}")`);
-            draggableItems.each(function() {
-                dropzone.append($(this));
-            });
-        });
-        alert(this.id);
-    });
-});
-
-
-    </script>
 </head>
 <body>
     <header>
@@ -36,65 +17,65 @@
             </ul>
         </nav>
     </header>
+
     <div id="carouselExample" class="carousel slide">
         <div class="carousel-inner">
-          <div class="carousel-item">
-            <img src="images/Ecommerce.jpg" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item ">
-            <img src="images/chatbot.jpg" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item active">
-            <img src="images/blog.jpg" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="images/forum.jpg" class="d-block w-100" alt="...">
-          </div>
+            <div class="carousel-item">
+                <img src="images/Ecommerce.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item ">
+                <img src="images/chatbot.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item active">
+                <img src="images/blog.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="images/forum.jpg" class="d-block w-100" alt="...">
+            </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
         </button>
         <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
         </button>
-      </div>
+    </div>
 
-    
-<div id="complete-container">
-    <div class="draggable-container">
-        <div id="search-container" class="card-body">
-          <div class="input-group mb-3">
-            <input id="searchInput" type="text" class="form-control" placeholder="Search for Features" aria-label="Username" aria-describedby="basic-addon1" style="color:#f6f3ff;">
-          </div>
-          <div id="product-listing" class="draggable2" draggable="true">Listing</div>
-          <div id="divContainer" class="draggable2" draggable="true">Messaging</div>
-          <div id="divContainer" class="draggable2" draggable="true">Filter</div>
-          <div id="divContainer" class="draggable2" draggable="true">Exchange</div>
-          <div id="divContainer" class="draggable2" draggable="true">Shipping</div>
-          <div id="divContainer" class="draggable2" draggable="true">Cart</div> 
-          <div id="divContainer" class="draggable2" draggable="true">Return</div>   
-          <div id="divContainer" class="draggable2" draggable="true">Logistics</div>   
-          <div id="divContainer" class="draggable2" draggable="true">Checkout</div> 
-          <div id="divContainer" class="draggable2" draggable="true">Payment</div>     
+    <div id="contain">
+        <div id="complete-container">
+            <div class="draggable-container">
+                <div class="input-group mb-3">
+                    <input id="searchInput" type="text" class="form-control" placeholder="Search for Features" aria-label="Username" aria-describedby="basic-addon1" style="color:#f6f3ff;">
+                </div>
+                <div id="product-listing" class="draggable2" draggable="true">Listing</div>
+                <div id="divContainer" class="draggable2" draggable="true">Messaging</div>
+                <div id="divContainer" class="draggable2" draggable="true">Filter</div>
+                <div id="divContainer" class="draggable2" draggable="true">Exchange</div>
+                <div id="divContainer" class="draggable2" draggable="true">Shipping</div>
+                <div id="divContainer" class="draggable2" draggable="true">Cart</div> 
+                <div id="divContainer" class="draggable2" draggable="true">Return</div>   
+                <div id="divContainer" class="draggable2" draggable="true">Logistics</div>   
+                <div id="divContainer" class="draggable2" draggable="true">Checkout</div> 
+                <div id="divContainer" class="draggable2" draggable="true">Payment</div>     
+            </div>
+            <div id="dropzone" class="dropzone" class="card" style="background-color: white">
+                <div id="dropzone-heading">Drag Features Here</div>
+            </div>
+        </div>
+        <div class="searchresults">
+            <div id="feature-img-container"></div>
+            <div id="text-container"></div>
         </div>
     </div>
-    <div id="dropzone" class="dropzone" class="card" style="background-color: white">
-        <div id="dropzone-heading">Drag Features Here</div>
-    </div>
-    <div class="searchresults">
-        <div id="feature-img-container"></div>
-        <div id="text-container"></div>
-    </div>
-    </div>
     
-    <div style="text-align: right; padding-left: 5%;"><span><a class="btn btn-primary">Save</a></span><span><a href="profile.html" class="btn btn-primary">Submit</a></span></div>
+    <div style="text-align: right;">
+        <span><a class="btn btn-primary">Save</a></span>
+        <span style="padding-left: 5px;"><a href="profile.html" class="btn btn-primary">Submit</a></span>
+    </div>
+
     <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script
-  src="https://code.jquery.com/jquery-3.7.1.min.js"
-  integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
-  crossorigin="anonymous"></script>
 </body>
 </html>
