--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <img class="logo" src="images/logo.png" alt="">
         <nav class="nav">
             <ul>
-                <li><a class="btn btn-primary">Contracts</a></li>
-                <li><a class="btn btn-primary">Profile</a></li>
+                <li><a href="up.html" class="btn btn-primary">Contracts</a></li>
+                <li><a href="up.html" class="btn btn-primary">Profile</a></li>
             </ul>
         </nav>
     </header>
@@ -71,7 +71,7 @@
     </div>
     
     <div style="text-align: right;">
-        <span><a class="btn btn-primary">Save</a></span>
+        <span><a class="btn btn-primary" href="up.html">Save</a></span>
         <span style="padding-left: 5px;"><a href="profile.html" class="btn btn-primary">Submit</a></span>
     </div>
 
